--- a/app/globals.css
+++ b/app/globals.css
@@ -16,3 +16,17 @@
     text-transform: none !important;
   }
 }
+
+html {
+  font-size: 16px;
+}
+@media (max-width: 640px) {
+  html {
+    font-size: 15px;
+  }
+}
+@media (max-width: 480px) {
+  html {
+    font-size: 14px;
+  }
+}
